<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/scheduleTaskToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:titleTextColor="@android:color/white"/>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Измените состояния настроек, которые Вы хотите запланировать."
                        android:layout_marginBottom="12dp"/>

                <TextView
                        android:text="@string/activity_choose_action_alarm_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_choose_action_alarmTextView"
                        android:textStyle="normal|bold"/>

                <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_choose_action_alarmSeekBar"
                        android:layout_marginBottom="12dp"/>

                <TextView
                        android:text="@string/activity_choose_action_music_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_choose_action_musicTextView"
                        android:textStyle="normal|bold"/>

                <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_choose_action_musicSeekBar"
                        android:layout_marginBottom="12dp"/>

                <TextView
                        android:text="@string/activity_choose_action_notification_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_choose_action_notificationTextView"
                        android:textStyle="normal|bold"/>

                <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_choose_action_notificationSeekBar"
                        android:layout_marginBottom="12dp"/>

                <TextView
                        android:text="@string/activity_choose_action_ringtone_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_choose_action_ringtoneTextView"
                        android:textStyle="normal|bold"/>

                <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_choose_action_ringtoneSeekBar"
                        android:layout_marginBottom="12dp"/>

                <TextView
                        android:text="@string/activity_choose_action_system_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_choose_action_systemTextView"
                        android:textStyle="normal|bold"/>

                <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_choose_action_systemSeekBar"
                        android:layout_marginBottom="12dp"/>

                <Switch
                        android:text="@string/activity_choose_action_disable_all_sounds_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_choose_action_disableAllSoundsSwitch"
                        android:layout_marginBottom="12dp"
                        android:checked="false"
                        android:textOn="@string/activity_choose_action_disable_all_sounds_switch_yes"
                        android:textOff="@string/activity_choose_action_disable_all_sounds_switch_no"/>

                <Switch
                        android:text="@string/activity_choose_action_wifi_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_choose_action_wifiSwitch"
                        android:layout_marginBottom="12dp"/>

                <Switch
                        android:text="@string/activity_choose_action_bluetooth_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_choose_action_bluetoothSwitch"
                        android:layout_marginBottom="12dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Укажите дату и время, на которое будут запланированы измененные настройки."
                        android:layout_marginBottom="12dp"/>

                <TextView
                        android:text="Выбранная дата и время:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="12dp">

                    <Button
                            android:text="Указать дату"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/Widget.AppCompat.Button.Colored"/>

                    <Button
                            android:text="Указать время"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/Widget.AppCompat.Button.Colored"/>
                </LinearLayout>

                <Button
                        android:text="Запланировать задачу"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.Button.Colored"/>

            </LinearLayout>
        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>